# ARES-agent

./: .gitignore  README.md  backend.py  bridge.py  main.py  notes.md  pyproject.toml  run_agent.py  run_server.py  run_servers.sh
UI/: Main.qml  Orb.qml
agentio/: __init__.py  agent_tts.py
myagent/: __init__.py  agent.py  basetypes.py  client.py  model.py  prompt.py  types.py  utils.py
myserver/: __init__.py  test_server.py
